spade-tests/src/snapshots/spade_tests__ports_integration__memory_of_ports_is_disallowed.snap
---
source: spade-tests/src/ports_integration.rs
---
entity A(clk: clock, p: &bool) -> bool {
    let idx: int<10> = 0;
    let mem: Memory<&bool, 1024> = inst std::mem::clocked_memory(clk, [(true, idx, p)]);

    true
}

error: Generic types cannot be ports
  ┌─ testinput:3:36
  │
3 │     let mem: Memory<&bool, 1024> = inst std::mem::clocked_memory(clk, [(true, idx, p)]);
  │                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Parameter std::mem::D is &bool which is a port type


